BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call_Plan_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom object to store interaction plan  information for sales reps.</description>
    <fields>
        <fullName>Account_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to store the account associated with a given call plan.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Plans</relationshipLabel>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Group_BMS__c</fullName>
        <label>Account Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HQ_Original_Details_BMS__c</fullName>
        <label>HQ Original Details</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nurses_Planned_Primary__c</fullName>
        <label>Nurses Planned Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurses_Remaining_Primary__c</fullName>
        <label>Nurses Remaining Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlet_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Plans (Outlet)</relationshipLabel>
        <relationshipName>Call_Plan_Outlet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Lookup_BMS_CORE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Rating__c</fullName>
        <description>Parent Product Rating</description>
        <inlineHelpText>Parent Product Rating</inlineHelpText>
        <label>Parent Account Product Ratings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Navigator_Planned_Primary__c</fullName>
        <label>Patient Navigator Planned Primary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Navigator_Remaining_Primary__c</fullName>
        <label>Patient Navigator Remaining Primary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacists_Planned_Primary__c</fullName>
        <label>Pharmacists Planned Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacists_Remaining_Primary__c</fullName>
        <label>Pharmacists Remaining Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Primary_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of planned primary interactions a sales rep has for their call plan.</description>
        <label>Planned Primary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Secondary_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of planned secondary interactions a sales rep has for their call plan..</description>
        <label>Planned Secondary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Tertiary_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of planned tertiary interactions a sales rep has for their call plan.</description>
        <label>Planned Tertiary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Administration_Planned_Primary__c</fullName>
        <label>Practice Administration Planned Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Administration_Remaining_Prim__c</fullName>
        <label>Practice Administration Remaining Primar</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_BMS__c</fullName>
        <label>Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Manager_Planned_Primary__c</fullName>
        <label>Reimbursement Manager Planned Primary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Manager_Remaining_Primary__c</fullName>
        <label>Reimbursement Manager Remaining Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Primary_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of remaining primary interactions a sales rep has for their call plan.</description>
        <label>Remaining Primary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Secondary_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of remaining secondary interactions a sales rep has for their call plan.</description>
        <label>Remaining Secondary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Tertiary_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of remaining tertiary interactions a sales rep has for their call plan.</description>
        <label>Remaining Tertiary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stakeholder_BMS_US__c</fullName>
        <label>Stakeholder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Display_BMS__c</fullName>
        <label>Stakeholder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Territory_BMS__c</fullName>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the territory associated with a given call plan.</description>
        <label>Territory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Details_Completed_BMS__c</fullName>
        <formula>Total_Planned_Details_BMS__c - Total_Remaining_Details_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Details Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Details_BMS__c</fullName>
        <formula>Planned_Primary_BMS__c +  Planned_Secondary_BMS__c  +  Planned_Tertiary_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Planned Details</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Primary_BMS__c</fullName>
        <label>Total Primary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Details_BMS__c</fullName>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom formula field to calculate the total number of details remaining for a given call plan.</description>
        <formula>Remaining_Primary_BMS__c + Remaining_Secondary_BMS__c + Remaining_Tertiary_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining Details</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Secondary_BMS__c</fullName>
        <label>Total Secondary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tertiary_BMS__c</fullName>
        <label>Total Tertiary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to store the user associated with a given call plan.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Owner_Lookup_BMS_CORE__r.User_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Source Country</label>
        <type>Text</type>
    </fields>
    <label>Call Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_BMS__c</columns>
        <columns>Product_BMS__c</columns>
        <columns>Territory_BMS__c</columns>
        <columns>Rating_BMS__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Planned_Primary_BMS__c</columns>
        <columns>Planned_Secondary_BMS__c</columns>
        <columns>Planned_Tertiary_BMS__c</columns>
        <columns>Remaining_Primary_BMS__c</columns>
        <columns>Remaining_Secondary_BMS__c</columns>
        <columns>Remaining_Tertiary_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CP - {0000}</displayFormat>
        <label>Call Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>